--- a/.github/workflows/BetaPublish.yml
+++ b/.github/workflows/BetaPublish.yml
@@ -18,7 +18,7 @@ jobs:
       - run: npm run codestyle
 
   publish-npm:
-    needs: build
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
