--- a/.github/workflows/BetaPublish.yml
+++ b/.github/workflows/BetaPublish.yml
@@ -1,4 +1,4 @@
-name: Node.js Package
+name: Publish beta
 
 on:
   push:
@@ -31,7 +31,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
   publish-gpr:
-    needs: build
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
