--- a/.github/workflows/BetaPublish.yml
+++ b/.github/workflows/BetaPublish.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
+      - run: npm run build
       - run: npm test
       - run: npm run codestyle
 
@@ -26,9 +27,10 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
+      - run: npm run build
       - run: npm publish --tag beta
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{secrets.npm}}
 
   publish-gpr:
     needs: test
@@ -40,6 +42,7 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
           scope: '@maximmasterr'
+      - run: npm run build
       - run: npm publish --tag beta
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
