--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,12 +29,12 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm run build
       - name: Publish beta
-        if: ${{ github.event.prerelease }}
+        if: github.event.prerelease
         run: npm publish --tag beta
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm}}
       - name: Publish stable
-        if: ${{ !github.event.prerelease }}
+        if: !github.event.prerelease
         run: npm publish --tag beta
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm}}
